--- a/GarciaMariaPablo/src/main/resources/templates/error/403.html
+++ b/GarciaMariaPablo/src/main/resources/templates/error/403.html
@@ -44,10 +44,10 @@
         </ul>
 
         <div class="mt-4 pt-3 border-top">
-            <a th:href="@{/}" href="../global/index.html" class="btn btn-primary me-2">
+            <a th:href="@{/}" href="../global/index.html" title="Volver al inico." class="btn btn-primary me-2">
                 <i class="bi bi-house-door me-1"></i>Ir al Inicio
             </a>
-            <a th:href="@{/login}" href="../global/login" class="btn btn-outline-secondary">
+            <a th:href="@{/login}" href="../global/login" title="Iniciar Sesion" class="btn btn-outline-secondary">
                 <i class="bi bi-box-arrow-in-right me-1"></i>Iniciar Sesión
             </a>
         </div>
