--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
@@ -20,7 +20,7 @@
 <body class="d-flex flex-column h-100 bg-light">
     <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
-    <main class="container flex-grow-1 my-4" role="main">
+    <main class="container flex-grow-1 my-4" >
         <div th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></div>
 
         <section>
@@ -92,8 +92,7 @@
                                 <td>
                                     <span class="badge w-100 rounded-pill fw-bold px-3"
                                         th:text="${incidencia.estado.nombre}"
-                                        th:style="'background-color: '+${incidencia.estado.colorFondo}+';color: '+${incidencia.estado.colorTexto}"
-                                        role="status"></span>
+                                        th:style="'background-color: '+${incidencia.estado.colorFondo}+';color: '+${incidencia.estado.colorTexto}"></span>
                                 </td>
                                 <td class="text-center" th:text="${incidencia.fechaCreacion}"></td>
                                 <td class="text-center">
@@ -130,6 +129,7 @@
                                     <div class="d-flex justify-content-between align-items-end">
                                         <div class="my-auto">
                                             <a th:href="@{/admin/dashboard}" href="../otros/dashboard.html"
+                                            title="Volver al panel de administración"   
                                                 class="btn btn-outline-secondary btn-sm">
                                                 <i class="bi bi-arrow-left-circle me-1"></i>Volver al panel
                                             </a>
@@ -265,7 +265,7 @@
                         </div>
                         <div class="mt-3 pt-3 border-top">
                             <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" role="switch" id="mostrarDesactivados"
+                                <input class="form-check-input" type="checkbox" id="mostrarDesactivados"
                                     name="mostrarDesactivados"
                                     th:checked="${mostrarDesactivados != null ? mostrarDesactivados : false}" />
                                 <label class="form-check-label" for="mostrarDesactivados">
