--- a/GarciaMariaPablo/src/main/resources/templates/admin/usuario/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/usuario/formulario.html
@@ -105,7 +105,7 @@
                     </div>
 
                     <div class="d-flex justify-content-between mt-4 pt-3 border-top">
-                        <a th:href="@{/admin/usuarios}" href="listar.html" class="btn btn-outline-secondary">
+                        <a th:href="@{/admin/usuarios}" href="listar.html" title="Volver al menu de usuarios." class="btn btn-outline-secondary">
                             <i class="bi bi-arrow-left me-1"></i>Cancelar
                         </a>
 
