--- a/GarciaMariaPablo/src/main/resources/templates/global/perfil.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/perfil.html
@@ -60,23 +60,23 @@
             <div class="col-lg-8">
                 <div class="card border-0 shadow-sm mb-4">
                     <div class="card-header bg-white border-0 pt-3">
-                        <ul class="nav nav-tabs card-header-tabs" id="profileTabs" role="tablist">
-                            <li class="nav-item" role="presentation">
+                        <ul class="nav nav-tabs card-header-tabs" id="profileTabs">
+                            <li class="nav-item">
                                 <button class="nav-link active" id="edit-tab" data-bs-toggle="tab"
-                                    data-bs-target="#edit-profile" type="button" role="tab">
+                                    data-bs-target="#edit-profile" type="button">
                                     <i class="bi bi-pencil me-2"></i>Editar perfil
                                 </button>
                             </li>
-                            <li class="nav-item" role="presentation" th:if="${usuario.rol.name == 'USER'}">
+                            <li class="nav-item"th:if="${usuario.rol.name == 'USER'}">
                                 <a class="nav-link" id="incidencias-tab" href="../user/incidencia/listar.html"
-                                    th:href="@{/user/incidencias}">
+                                    th:href="@{/user/incidencias}" title="Comprobar mis incidencias>
                                     <i class="bi bi-file-earmark-text me-2"></i>Mis incidencias
                                 </a>
                             </li>
-                            <li class="nav-item" role="presentation"
+                            <li class="nav-item"
                                 th:if="${usuario.rol.name == 'TECH' || usuario.rol.name == 'ADMIN'}">
                                 <button class="nav-link" id="stats-tab" data-bs-toggle="tab"
-                                    data-bs-target="#estadisticas" type="button" role="tab">
+                                    data-bs-target="#estadisticas" type="button">
                                     <i class="bi bi-bar-chart me-2"></i>Estadísticas
                                 </button>
                             </li>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="card-body">
                         <div class="tab-content" id="profileTabsContent">
-                            <div class="tab-pane fade show active" id="edit-profile" role="tabpanel">
+                            <div class="tab-pane fade show active" id="edit-profile">
                                 <form th:action="@{/perfil/modificar}" th:object="${usuarioDao}" th:method="put">
                                     <input type="hidden" th:field="*{id}">
                                     <div class="row g-3">
@@ -116,7 +116,7 @@
                                 </form>
                             </div>
 
-                            <div class="tab-pane fade" id="estadisticas" role="tabpanel"
+                            <div class="tab-pane fade" id="estadisticas"
                                 th:if="${usuario.rol.name == 'TECH' || usuario.rol.name == 'ADMIN'}">
                                 <div class="row">
                                     <div class="col-md-6 mb-4">
@@ -163,12 +163,12 @@
             </div>
         </div>
 
-        <div class="modal fade" id="cambiarPasswordModal" tabindex="-1" aria-hidden="true">
+        <div class="modal fade" id="cambiarPasswordModal" tabindex="-1" >
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title">Cambiar contraseña</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" ></button>
                     </div>
                     <div class="modal-body">
                         <form th:action="@{/perfil/password}" th:object="${contrasena}" th:method="put">
