--- a/GarciaMariaPablo/src/main/resources/templates/tech/incidencia/inspeccionar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/tech/incidencia/inspeccionar.html
@@ -15,7 +15,7 @@
 
     <th:block th:replace="~{tech/_fragments/headerTecnico.html :: headerTecnico}"></th:block>
 
-    <main class="container flex-grow-1 my-4" role="main">
+    <main class="container flex-grow-1 my-4" >
         <div th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></div>
 
         <article class="card border-0 shadow rounded-3 overflow-hidden">
@@ -99,7 +99,7 @@
                 </section>
 
                 <section class="d-flex justify-content-between align-items-center mt-4">
-                    <a th:href="@{/tech/incidencias/asignadas}" href="listar.html" class="btn btn-outline-secondary">
+                    <a th:href="@{/tech/incidencias/asignadas}" href="listar.html" title="Ver mis asignadas" class="btn btn-outline-secondary">
                         <i class="bi bi-arrow-left me-1"></i>Volver al listado
                     </a>
                     <div>
@@ -118,8 +118,8 @@
     </main>
 
     <!-- Modal para editar estado -->
-    <div class="modal fade" id="editarEstadoModal" tabindex="-1" aria-labelledby="editarEstadoModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="editarEstadoModal" tabindex="-1"
+        >
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header bg-main text-white">
@@ -127,7 +127,7 @@
                         <i class="bi bi-pencil-square me-2"></i>Cambiar Estado
                     </h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
+                        ></button>
                 </div>
                 <form th:action="@{'/tech/incidencias/modificar/' + ${incidencia.id}}" th:method="put">
                     <div class="modal-body">
