--- a/GarciaMariaPablo/src/main/resources/templates/user/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/user/_fragments/header.html
@@ -2,7 +2,7 @@
 
     <header class="navbar navbar-expand-lg navbar-dark bg-main shadow-lg px-3">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="../otros/dashboard.html" th:href="@{/user/dashboard}">
+            <a class="navbar-brand d-flex align-items-center" href="../otros/dashboard.html" th:href="@{/user/dashboard}" title="Ir al dashboard">
                 <i class="bi bi-person-fill"></i>
                 <span class="fw-bold">Panel de Usuario</span>
             </a>
@@ -15,15 +15,15 @@
             <div class="collapse navbar-collapse" id="navbarMain">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown" th:classappend="${activeTab.contains('/user/incidencias')} ? 'active'">
-                        <a class="nav-link dropdown-toggle" href="#" id="incidenciasDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="incidenciasDropdown"
                             data-bs-toggle="dropdown">
                             <i class="bi bi-file-earmark-text me-1"></i> Incidencias
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" th:href="@{/user/incidencias}"
+                            <li><a class="dropdown-item" th:href="@{/user/incidencias}" title="Ver incidencias"
                                     href="../incidencia/listar.html"><i class="bi bi-list-ul me-2"></i>Mis
                                     Incidencias</a></li>
-                            <li><a class="dropdown-item" th:href="@{/user/incidencias/crear}"><i
+                            <li><a class="dropdown-item" th:href="@{/user/incidencias/crear}" href="../incidencia/formulario.html" title="Crear una incidencia"><i
                                         class="bi bi-plus-circle me-2"></i>Nueva Incidencia</a></li>
                         </ul>
                     </li>
@@ -75,12 +75,12 @@
                                 <div class="accordion-body p-0">
                                     <ul class="nav flex-column ps-3">
                                         <li class="nav-item">
-                                            <a class="nav-link custom-nav-link" th:href="@{/user/incidencias}">
+                                            <a class="nav-link custom-nav-link" th:href="@{/user/incidencias}" href="../incidencia/listar.html" title="Ver incidencias"> 
                                                 <i class="bi bi-list-ul me-2"></i>Mis Incidencias
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link custom-nav-link" th:href="@{/user/incidencias/crear}">
+                                            <a class="nav-link custom-nav-link" th:href="@{/user/incidencias/crear}" href="../incidencia/formulario.html" title="Crear una incidencia">
                                                 <i class="bi bi-plus-circle me-2"></i>Nueva Incidencia
                                             </a>
                                         </li>
