--- a/GarciaMariaPablo/src/main/resources/templates/global/faq.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/faq.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Explora las respuestas a las preguntas más frecuentes sobre cómo usar el sistema de gestión de incidencias. Soluciones rápidas para usuarios y técnicos.">
     <meta name="author" content="Pablo Garcia Maria">
 
-    <script src="../../static/js/faq/buscarFAQs.js" th:src="@{/js/faq/buscarFAQs.js}" defer></script>
+    <script defer src="../../static/js/faq/buscarFAQs.js" th:src="@{/js/faq/buscarFAQs.js}" ></script>
     <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 </head>
 
