--- a/GarciaMariaPablo/src/main/resources/templates/global/login.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/login.html
@@ -10,7 +10,7 @@
     <title>Iniciar Sesión | Gestión de Incidencias</title>
 
     <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
-    <script th:src="@{/js/login/mostrarContraseña.js}" src="../../static/js/login/mostrarContraseña.js" defer></script>
+    <script defer th:src="@{/js/login/mostrarContraseña.js}" src="../../static/js/login/mostrarContraseña.js"></script>
 </head>
 
 <body class="d-flex flex-column min-vh-100 bg-light">
