--- a/GarciaMariaPablo/src/main/resources/templates/global/register.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/register.html
@@ -10,12 +10,12 @@
     <title>Registro | Gestión de Incidencias</title>
 
     <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
-    <script th:src="@{/js/register/mostrarContraseña.js}" src="../../static/js/register/mostrarContraseña.js"
-        defer></script>
-    <script th:src="@{/js/register/comprobarContraseñas.js}" src="../../static/js/register/comprobarContraseñas.js"
-        defer></script>
-    <script th:src="@{/js/register/comprobarFormulario.js}" src="../../static/js/register/comprobarFormulario.js"
-        defer></script>
+    <script defer th:src="@{/js/register/mostrarContraseña.js}" src="../../static/js/register/mostrarContraseña.js"
+        ></script>
+    <script defer th:src="@{/js/register/comprobarContraseñas.js}" src="../../static/js/register/comprobarContraseñas.js"
+        ></script>
+    <script defer th:src="@{/js/register/comprobarFormulario.js}" src="../../static/js/register/comprobarFormulario.js"
+        ></script>
 </head>
 
 <body class="d-flex flex-column min-vh-100 bg-light">
