--- a/GarciaMariaPablo/src/main/resources/templates/user/incidencia/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/user/incidencia/formulario.html
@@ -10,7 +10,7 @@
     <title th:unless="${modificar}">Nueva Incidencia | Gestión de Incidencias</title>
     <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 
-    <script src="../../../static/user/javascript/incidencia/formulario/revisarFormulario.js"
+    <script defer src="../../../static/user/javascript/incidencia/formulario/revisarFormulario.js"
         th:src="@{/user/javascript/incidencia/formulario/revisarFormulario.js}"></script>
 
 </head>
