--- a/GarciaMariaPablo/src/main/resources/templates/tech/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/tech/incidencia/listar.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Listado de incidencias para técnicos">
     <title th:text="${tituloPagina} + ' | Gestión de Incidencias'">Listado | Gestión de Incidencias</title>
     <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
-    <script src="../../../static/tech/javascript/incidencia/listar/eliminarIncidencia.js"
+    <script defer src="../../../static/tech/javascript/incidencia/listar/eliminarIncidencia.js"
         th:src="@{/tech/javascript/incidencia/listar/eliminarIncidencia.js}"></script>
     <script defer src="../../../static/js/params/modificarParams.js" th:src="@{/js/params/modificarParams.js}"
         type="text/javascript" crossorigin="anonymous">
@@ -287,7 +287,7 @@
 
     <footer th:replace="~{_fragments/footer.html :: footer}"></footer>
 
-    <script>
+    <script> <!--revisarlo-->
         // Script para manejar el modal de edición en el listado
         document.addEventListener('DOMContentLoaded', function () {
             var editarEstadoModal = document.getElementById('editarEstadoModal');
